[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenario.gd" type="Script" id=2]
[ext_resource path="res://Roca.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 641.456, -6.23685, 0, 0, 0, 0, -2.81628, -3.24023, 0, 0, 0, 0, 3.17694, 961.67, 0, 0, 0, 0, 638.459, 952.68, 0, 0, 0, 0, 641.456, -6.23685 )
}

[node name="Escenario" type="Node"]
script = ExtResource( 2 )
Roca = ExtResource( 3 )

[node name="Roca_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Score" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 255.012, 424.396 )

[node name="PosiciondeInicio" type="Position2D" parent="."]
position = Vector2( 320, 480 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="RocaPosicion" type="PathFollow2D" parent="Camino"]
position = Vector2( 641.456, -6.23685 )
rotation = 3.13694
[connection signal="timeout" from="Roca_timer" to="." method="_on_Roca_timer_timeout"]
[connection signal="timeout" from="Score" to="." method="_on_Score_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="Golpe" from="Player" to="." method="game_over"]
